# apertium-nhi

./: ACKNOWLEDGEMENTS  Makefile.am  README  README.md  apertium-nhi.nhi.lexc  apertium-nhi.nhi.mor.twol  apertium-nhi.nhi.phon  apertium-nhi.nhi.rlx  apertium-nhi.nhi.spellrelax  apertium-nhi.nhi.tagged  apertium-nhi.nhi.twol  apertium-nhi.nhi.udx  apertium-nhi.nhi_SEP.phon  apertium-nhi.pc.in  configure.ac  modes.xml  nhi.prob
corpus/: README.md  omitlan_1.conllu  omitlan_1.txt  omitlan_2.conllu  omitlan_2.txt  tiquitini.conllu  tiquitini_ACK.txt  tiquitini_SP.txt  txt2conllu.py
corpus/ACK/: omitlan_2.txt  tiquitini_ACK.txt
scripts/: add_verb_stems.py  check-multichars.sh  coverage.sh  generate_verb_bases_from_stem.py
test/: analysis-input.txt  analysis-morph-expected.txt  analysis-morph-output.txt  tests.json
